5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1593_2426.log
== TEST (2019-04-01 16:17:15) 
-- CODE:
t = float(input("tempo: ")
v = float(input("velocidade: "))
d = v/t
print(d)
-- ERROR:
File "XXXX", line 2
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:17:32) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v/t
print(d)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:23:08) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v/t
Ql = d/12
print(d)
print(Ql, "litros")
-- OUTPUT:
11.11111111111111
0.9259259259259259 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:24:33) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v/t
Ql = d/12
print(d)
print(Ql, "litros")
-- OUTPUT:
11.11111111111111
0.9259259259259259 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:26:34) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v*t
Ql = d/12
print(d, ql "litros")
-- ERROR:
File "XXXX", line 5
    print(d, ql "litros")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:26:43) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v*t
Ql = d/12
print(d, ql"litros")
-- ERROR:
File "XXXX", line 5
    print(d, ql"litros")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:28:01) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v*t
Ql = d/12
print(round(d,1))
print(round(Ql, 1))
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:28:25) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v*t
Ql = d/12
print(round(d,1))
print(round(Ql, 1))
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:28:35) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))
d = v*t
Ql = d/12
print(round(d,1))
print(round(Ql, 1))
-- EXECUTION TIME:
0.161907
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
